# head-to-head-api

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  clear_images_from_mongo.py  main.py  pyproject.toml  requirements.txt
api/: admin_config.py  matches.py  overview.py  players.py  server.py  tournaments.py  utils.py
api/dependencies/: auth.py  mongo.py
images/: base_64.py
